<resources>
    <string name="app_name">Innovant</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_contact_history">My Contacts</string>
    <string name="title_activity_add_contact">New Contact</string>
    <string name="title_activity_document">My Document</string>
    <string name="title_activity_task_history">My Task</string>
    <string name="title_activity_todays_task">Todays Task</string>
    <string name="title_activity_courier">Courier List</string>
    <string name="title_activity_add_courier">Add Courier</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_cheque">Cheque History</string>
    <string name="title_activity_addcheque">Add Cheque</string>
    <string name="title_activity_addTask">Create Task</string>
    <string name="title_activity_my_pipeline">My Pipeline</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="runtime_permissions_txt">Please enable ALL permissions from app settings.</string>
    <string name="temp">temp</string>
    <string name="empty">empty</string>
    <string name="attendance">You have to submit your attendance before starting your work</string>

    <!-- todo login screen -->
    <string name="login">login</string>
    <string name="login_password">Password</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <!-- todo contact company form -->

    <string name="label_name">Label Name</string>
    <string name="employee_name">Employee Name</string>
    <string name="tag_name">Tag Name</string>

    <string name="currence">₹</string>
    <string name="currence_txt">Qty</string>
    <string name="terms_condition">Terms And Conditions</string>
    <string name="narration">Narration</string>
    <string name="problem">Problem</string>

    <string name="add_printing">Printing Prority</string>
    <string name="company_detail">Company Details</string>
    <string name="address_detail">Address Details</string>
    <string name="finanical_detail">Financal Details</string>
    <string name="wherehouse_detail">Warehouse Details</string>
    <string name="company_name">Company Name</string>
    <string name="office_address">Office Address</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="zone">Zone</string>
    <string name="area">Area</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pin">Pincode</string>
    <string name="office_phone">Phone</string>
    <string name="mobile">Mobile No</string>
    <string name="email">Email</string>
    <string name="website">Company Website</string>
    <string name="wherehouse">Wherehouse</string>
    <string name="Address">Address</string>
    <string name="gst_no">GST No</string>
    <string name="pan_no">PAN No</string>
    <string name="same_address">For Same Address</string>
    <string name="courier_address">Company Address</string>
    <string name="courier_address_home">Home Address</string>
    <string name="courier_address_office">Office Address</string>
    <string name="courier_address_where">Warehouse Address</string>
    <string name="print_lable">Check mark print lable type</string>
    <string name="bank_account_no">Bank Account No</string>
    <string name="bank_holder_name">Account Holder Name</string>
    <string name="bank_ifsc_code">Bank IFSC Code</string>

    <string name="individual_detail">Individual Details</string>
    <string name="office_detail">Office Details</string>
    <string name="same_as_home">Same As Home</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="middle">Middle Name</string>
    <string name="last">Last Name</string>
    <string name="job_title">Job Title</string>
    <string name="home_address">Home Address</string>
    <string name="home_phone">Home Phone</string>
    <string name="whatsapp">Whatsapp No</string>
    <string name="aadhar_no">Aadhar No</string>
    <string name="event_note">Event Note</string>
    <string name="note">Note</string>

    <!-- todo courier activity -->
    <string name="sender_detail">Sender Detail</string>

    <string name="reciver_detail">Receiver Detail</string>
    <string name="reciver_company">Receiver Company</string>
    <string name="sender_company">Sender Company</string>
    <string name="sender_label">Sender Label</string>
    <string name="reciver_person">Receiver Person</string>
    <string name="person_name">Assignor Person Name</string>
    <string name="person_mobile">Assignor Person Mobile No</string>
    <string name="sender_person">Sender Person</string>
    <string name="address">Address</string>

    <string name="parcel_detail">Parcel Detail</string>
    <string name="parcel_type">Parcel Type</string>
    <string name="description">Description</string>
    <string name="weight">Weight KG</string>
    <string name="weight_gm">Weight GM</string>
    <string name="cost">Cost</string>

    <string name="shipping_detail">Shipping Detail</string>
    <string name="courier_company_name">Courier Company Name</string>
    <string name="pickup_person">Pickup Person</string>
    <string name="deliverd_date">Deliverd Date</string>
    <string name="tracking_no">Tracking No</string>
    <string name="delivery_status">Delivery Status</string>

    <!-- todo filter toast string -->
    <string name="from_date">From date Should Be Less then to date</string>
    <string name="to_date">To date  Should Be More then From date</string>
    <string name="from_date_to_date_equals">From Date and To date Should not equals</string>

    <!-- cheque activity -->
    <string name="cheque_title">Add Cheque</string>
    <string name="bank_name">Bank Name</string>
    <string name="party_name">Party Name</string>
    <string name="cheque_no">Cheque No</string>
    <string name="amount">Amount</string>
    <string name="payment_date">Cheque Date</string>
    <string name="payment_type">Payment Type</string>

    <!-- create task -->
    <string name="create_task">Create Task</string>
    <string name="task_name">Task Name</string>
    <string name="task_no">Task No</string>
    <string name="task_date">Date &amp; Time</string>
    <string name="task_type">Task Type</string>
    <string name="task_assigned">Task Assigned By</string>
    <string name="task_status">Task Status</string>
    <string name="task_to">Task To</string>
    <string name="task_desc">Task Description</string>
    <string name="task_color">Task Color Tag</string>
    <string name="task_deadline">Deadline</string>
    <string name="task_priority">Task Priority</string>

    <!-- todo dashboard tutoral string -->
    <string name="tap_intro_dashboard_navigation">Navigation drawer</string>
    <string name="tap_intro_dashboard_navigation_desc">Tap here or swipe from left edge of the screen to open navigation drawer</string>

    <string name="tap_intro_contact">Add Contact</string>
    <string name="tap_intro_contact_desc"></string>
    <string name="tap_intro_search_contact">Search contact</string>
    <string name="tap_intro_search_contact_desc"></string>
    <string name="tap_intro_filter_contact">Filter contact</string>
    <string name="tap_intro_filter_contact_desc"></string>

    <string name="tap_intro_document">Add Document</string>
    <string name="tap_intro_document_desc"></string>
    <string name="tap_intro_courier">Add Courier</string>
    <string name="tap_intro_courier_desc"></string>
    <string name="tap_intro_search_courier">Search Courier</string>
    <string name="tap_intro_search_courier_desc"></string>
    <string name="tap_intro_filter_courier">Filter Courier</string>
    <string name="tap_intro_filter_courier_desc"></string>
    <string name="tap_intro_task">Add New Task</string>
    <string name="tap_intro_task_desc"></string>
    <string name="tap_intro_cheque">Add Cheque</string>
    <string name="tap_intro_cheque_desc"></string>
    <string name="tap_intro_search_cheque">Search Cheque</string>
    <string name="tap_intro_search_cheque_desc"></string>
    <string name="tap_intro_filter_cheque">Filter Cheque</string>
    <string name="tap_intro_filter_cheque_desc"></string>

    <string name="tap_intro_dashboard_notifaction_apply">Check Notifaction</string>
    <string name="tap_intro_dashboard_notifaction_apply_desc">Tap here to check notification</string>

    <!-- viditor book -->
    <string name="visitor_name">Please Enter Your Name</string>
    <string name="visitor_mobile">Please Enter Your Mobile No.</string>
    <string name="visitor_mobile_validattion">Please Enter Valid Mobile No.</string>
    <string name="visitor_email">Please Enter Valid Email</string>


    <!-- todo music -->
    <string name="main_category_activity_title">My Music</string>
    <string name="sub_category_activity_title">Sub Category List</string>
    <string name="music_list_title">Music List</string>
    <string name="play_music_title">Music Detail</string>

</resources>
