<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_cheque"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dashboard_header">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:elevation="1dp"
            android:visibility="visible"
            app:cardCornerRadius="3dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/cheque_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/cheque_title"
                    android:textColor="@color/text_color"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/divider_color" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/payment_type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_input" />

                <!-- todo Party name-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_partyname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/input_party_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/party_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/contact_txt_size" />

                </android.support.design.widget.TextInputLayout>

                <!-- todo Cheque No-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_cheque_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_input"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/input_cheque_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cheque_no"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:textSize="@dimen/contact_txt_size" />

                </android.support.design.widget.TextInputLayout>

                <!-- todo amount -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_input"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/input_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/amount"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:textSize="@dimen/contact_txt_size" />

                </android.support.design.widget.TextInputLayout>

                <!-- todo payment date -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_payment_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_input"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/input_payment_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/payment_date"
                        android:textSize="@dimen/contact_txt_size" />

                </android.support.design.widget.TextInputLayout>

                <!-- todo bank -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_bank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_input"
                    app:hintTextAppearance="@style/TextLabel">

                    <AutoCompleteTextView
                        android:id="@+id/input_bank_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/bank_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textSize="@dimen/contact_txt_size"
                        android:visibility="visible"></AutoCompleteTextView>

                </android.support.design.widget.TextInputLayout>

                <!-- todo Company name -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_input"
                    app:hintTextAppearance="@style/TextLabel">

                    <AutoCompleteTextView
                        android:id="@+id/input_company_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/company_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textSize="@dimen/contact_txt_size"
                        android:visibility="visible"></AutoCompleteTextView>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
