<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_clear_red_900_36dp"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Filter"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/cancelbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_clear_red_900_36dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/divider_color" />

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/main_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <com.innovent.erp.custom.MultiSelectionSpinner
                        android:id="@+id/contact_label"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittextview_background"
                        android:visibility="visible"></com.innovent.erp.custom.MultiSelectionSpinner>

                    <com.innovent.erp.custom.MultiSelectionSpinnerEmployee
                        android:id="@+id/contact_emplayee"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittextview_background"
                        android:visibility="gone"></com.innovent.erp.custom.MultiSelectionSpinnerEmployee>

                    <com.innovent.erp.custom.MultiSelectionSpinnerTag
                        android:id="@+id/contact_tag"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittextview_background"></com.innovent.erp.custom.MultiSelectionSpinnerTag>

                    <!-- todo zone-->
                    <fr.ganfra.materialspinner.MaterialSpinner
                        android:id="@+id/zone_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_input" />
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_zone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_input"
                        android:visibility="gone"
                        app:hintTextAppearance="@style/TextLabel">

                        <AutoCompleteTextView
                            android:id="@+id/input_zone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:textSize="@dimen/contact_txt_size"
                            android:hint="@string/zone"
                            android:visibility="visible"></AutoCompleteTextView>

                    </android.support.design.widget.TextInputLayout>

                    <!-- todo district -->
                    <fr.ganfra.materialspinner.MaterialSpinner
                        android:id="@+id/district_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_input" />
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_district"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_input"
                        android:visibility="gone"
                        app:hintTextAppearance="@style/TextLabel">

                        <AutoCompleteTextView
                            android:id="@+id/input_district"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:hint="@string/district"
                            android:textSize="@dimen/contact_txt_size"
                            android:visibility="visible"></AutoCompleteTextView>

                    </android.support.design.widget.TextInputLayout>

                    <!-- todo city-->
                    <fr.ganfra.materialspinner.MaterialSpinner
                        android:id="@+id/city_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_input" />
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_input"
                        android:visibility="gone"
                        app:hintTextAppearance="@style/TextLabel">

                        <AutoCompleteTextView
                            android:id="@+id/input_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/city"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:textSize="@dimen/contact_txt_size"
                            android:visibility="visible"></AutoCompleteTextView>

                    </android.support.design.widget.TextInputLayout>

                    <!-- todo name -->
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_input"
                        app:hintTextAppearance="@style/TextLabel">

                        <AutoCompleteTextView
                            android:id="@+id/input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:textSize="@dimen/contact_txt_size"
                            android:visibility="visible"></AutoCompleteTextView>

                    </android.support.design.widget.TextInputLayout>

                    <!-- todo mobile -->
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_input"
                        app:hintTextAppearance="@style/TextLabel">

                        <AutoCompleteTextView
                            android:id="@+id/input_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobile"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:textSize="@dimen/contact_txt_size"
                            android:visibility="visible"></AutoCompleteTextView>

                    </android.support.design.widget.TextInputLayout>

                    <!-- todo pincode -->
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_pincode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_input"
                        app:hintTextAppearance="@style/TextLabel">

                        <AutoCompleteTextView
                            android:id="@+id/input_pincode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/pin"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:textSize="@dimen/contact_txt_size"
                            android:visibility="visible"></AutoCompleteTextView>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/clearbtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttion_login_background"
                    android:text="Clear"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttion_login_background"
                    android:text="Submit"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>